@@ -1,0 +1,9 @@
+<html>
+<head>
+<meta http-equiv="refresh" content="0; url=49-mech-get-file.html" />
+<title>65-mech-meta.html</title>
+</head>
+<body>
+The body
+</body>
+</html>
